fix sticky header

--- a/css-postions-2.html
+++ b/css-postions-2.html
@@ -76,6 +76,7 @@
             background-color: gold;
             position: sticky;
             top: 0px;
+            z-index: 999999;
         }
         
     </style>
