--- a/meda-query-grid.html
+++ b/meda-query-grid.html
@@ -9,42 +9,46 @@
             box-sizing: border-box;
         }
         .projects{
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
+            gap: 1rem;
+            grid-auto-flow: dense;
         }
 
         .project{
             border:  1px solid black;
             padding: 1rem;
-            width: 20%
         }
-        
         .project img{
             width: 100%;
-            height:150px;
-            object-fit: cover;
         }
 
-        @media(max-width: 1279px){
-            .project{
-                width: 25%;
+        @media(min-width:640px){
+            .projects{
+                grid-template-columns: repeat(2,1fr);
             }
         }
-        @media(max-width:1023px){
-            .project{
-                width: 33.33%;
+        @media(min-width:768px){
+            .projects{
+                grid-template-columns: repeat(3,1fr);
             }
         }
-        @media(max-width:767px){
-            .project{
-                width: 50%;
+        @media(min-width:1024px){
+            .projects{
+                grid-template-columns: repeat(4,1fr);
             }
         }
-        @media(max-width:639px){
-            .project{
-                width: 100%
+        @media(min-width:1280px){
+            .projects{
+                grid-template-columns: repeat(5,1fr);
             }
         }
+
+        /* .tall{
+            grid-row: span 2;
+        }
+        .wide{
+            grid-column: span 2;
+        } */
 
     </style>
 </head>
@@ -52,14 +56,14 @@
     <h1>Projects</h1>
     
     <div class="projects">
-        <div class="project">
+        <div class="project tall">
             <img src="https://picsum.photos/200/200" alt="">
             <h2>Git</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ex quidem cumque tempore tenetur doloribus! Cumque, eveniet aliquam voluptatem asperiores reprehenderit harum. Adipisci corporis similique quidem sequi. Quisquam, quidem porro!</p>
         </div>
-        <div class="project">
-            <img src="https://picsum.photos/200/200" alt="">
-            <h2>Git</h2>
+        <div class="project wide">
+            <img src="https://picsum.photos/300/200" alt="">
+            <h2>Node</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ex quidem cumque tempore tenetur doloribus! Cumque, eveniet aliquam voluptatem asperiores reprehenderit harum. Adipisci corporis similique quidem sequi. Quisquam, quidem porro!</p>
         </div>
         <div class="project">
